# llm-consensus-system-pooc

./: .coveragerc  .env.example  .env.exemple  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  Dockerfile  Dockerfile.dev  GIT.md  LICENSE  README.md  SECURITY.md  agent.md  code_review.json  docker-compose.dev.yml  docker-compose.yml  feature_request_1.json  feature_request_2.json  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  semgrep.yml  snyk.yml  sonarqube.yml  test.yml
docker/otel/: otel-collector-config.yaml
docker/prometheus/: prometheus.yml
docker/tempo/: local-config.yaml
docs/: ASSUMPTIONS.md  configuration.md  getting-started.md  index.md  operations.md  overview.md
docs/api/: authentication.md  authorization.md  error_codes.md  index.md  rate_limit.md  versioning.md
docs/architecture/: assumptions.md  c1-context.md  c2-container.md  c3-component.md  c4-code.md  data-flow.md  dependencies.md  deployment.md  index.md  interfaces.md  modularity-principles.md  module_structure.md  safety_mechanisms.md  security-architecture.md  system-boundaries.md
docs/change_management/: change_control_process.md  change_log.md  change_request_template.md  configuration_management.md  impact_analysis_template.md  index.md  release_management.md  version_control_policy.md
docs/deployment/: docker.md  index.md  infrastructure.md  monitoring.md
docs/design/: error_handling.md  index.md  state_management.md
docs/engineering/: index.md  standards.md
docs/feature-evals/: concurrency-budget-calculator.md  confidence-calibration.md  cost-latency-accounting.md  deterministic-bench-harness.md  deterministic-replay-tokens.md  early-stop-self-consistency.md  fastapi-metrics-router.md  gate-reason-telemetry.md  output-schema-validation.md  pii-redaction-prefilter.md  policy-hot-reload.md  policy-lint-cli.md  preamble-catalog.md  prompt-auto-truncation.md  prompt-safety-prefilter.md  provider-circuit-breaker.md  provider-registry.md  ranked-choice-consensus.md  reliability-weighted-judge.md  run-event-callback.md  strategy-advisor-hinting.md  timeout-tuner-helper.md
docs/governance/: contribution-model.md  decision-process.md  index.md  roadmap.md
docs/maintenance/: health-checks.md  index.md  troubleshooting.md
docs/references/: abbreviations.md  glossary.md  index.md
docs/security/: audit_logging.md  encryption.md  index.md  secrets_management.md  security_controls.md  threat_model.md  vulnerability_management.md
docs/testing/: index.md  integration_tests.md  performance_tests.md  security_tests.md  test_coverage.md  test_plan.md  test_strategy.md  (+1 more)
examples/: __init__.py  crewai_consensus_agent.py  examples.py  quickstart.py  test_consensus_extraction.py  test_explicit_generation.py
exemples/: __init__.py  basic_usage.py  live_openrouter.py
policies/: default.policy.yaml  embedded-safety.policy.yaml  policy.schema.json
sample/: config.py
src/: __init__.py  client.py  config.py  errors.py
tests/: test_observability_otlp.py
(+195 files in other folders)
